--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0"
   }
 }
